lesson 7 MVP new plant activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PlantCareApp</string>
+    <string name="empty_values">Set name and days between waterings</string>
 </resources>
